--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html lang="en">
 
 <head>
+  <!-- Primary Meta Tags -->
+<title>Family-club-Warsaw</title>
+<meta name="title" content="Family-club-Warsaw" />
+<meta name="description" content="" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://mrwebhero.github.io/family-club-slides/" />
+<meta property="og:title" content="Family-club-Warsaw" />
+<meta property="og:description" content="" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://mrwebhero.github.io/family-club-slides/" />
+<meta property="twitter:title" content="Family-club-Warsaw" />
+<meta property="twitter:description" content="" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>family</title>
